test/testdata/classes/instance/invalid_unary_op_error.lox
class Foo {}
-Foo(); // error: '-' operator cannot be used with type 'Foo'
